actual package fixes

--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,8 @@ test {
     testLogging {
         events "PASSED", "FAILED", "SKIPPED"
     }
+    reports {
+        html.required.set(true)
+        junitXml.required.set(true)
+    }
 }
