--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
 }
 
 test {
-    useTestNG()
+    useTestNG() {
+        useDefaultListeners = true
+    }
     testLogging {
         events "PASSED", "FAILED", "SKIPPED"
     }
