--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group = 'org.example'
@@ -12,15 +13,19 @@ repositories {
 dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.27.0'
     testImplementation 'org.testng:testng:7.9.0'
+    testImplementation 'org.aspectj:aspectjweaver:1.9.20'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    testImplementation 'io.qameta.allure:allure-testng:2.24.0'
 }
 
 test {
     useTestNG() {
         useDefaultListeners = true
     }
+    systemProperty 'allure.results.directory', layout.buildDirectory.file("allure-results").get().asFile.absolutePath
+
     testLogging {
         events "PASSED", "FAILED", "SKIPPED"
     }
