--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .gradle
 build/
+app/build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+app/allure-results
+config.properties
 
 ### IntelliJ IDEA ###
 .idea/
@@ -13,27 +16,5 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
 ### VS Code ###
 .vscode/
-
-### Mac OS ###
-.DS_Store
