--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.27.0'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.36.0'
     testImplementation 'org.testng:testng:7.9.0'
     testImplementation 'org.aspectj:aspectjweaver:1.9.20'
     implementation 'org.slf4j:slf4j-api:1.7.32'
@@ -24,6 +24,7 @@ dependencies {
 test {
     useTestNG() {
         useDefaultListeners = true
+        suites "src/test/resources/testng.xml"
     }
 
     testLogging {
