--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ test {
     useTestNG() {
         useDefaultListeners = true
         suites "src/test/resources/testng.xml"
+        def env = System.getenv("ENV") ?: System.getProperty("env", "prod")
+        systemProperty "env", env
     }
 
     testLogging {
